--- a/css/variables.scss
+++ b/css/variables.scss
@@ -1,12 +1,23 @@
 /********************************
 ***            FONTS          ***
 ********************************/
+
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+
+body{
+   font-family: 'Open Sans',serif;
+}
+
 @font-face {
     font-family: 'theHalloween';
     src: url("../media/fonts/The_Halloween.ttf");
 }
 
+
 $font-main: 'theHalloween';
+$font-text: 'Open Sans';
+
+
 
 /********************************
 ***       COLOR PALETTE       ***
